# zmqpp_sandbox

./: CMakeLists.txt  config.ini  connexion.cpp  engine.cpp  main.cpp  many_client.cpp  ping.cpp  poll.cpp  test.cpp  test_2.cpp
cmake/Modules/: FindZMQ.cmake  FindZMQPP.cmake
include/ini/: ini.h
